--- a/xLights/Xlights.vcxproj
+++ b/xLights/Xlights.vcxproj
@@ -500,7 +500,9 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClCompile Include="AboutDialog.cpp" />
     <ClCompile Include="ai\AIColorPaletteDialog.cpp" />
     <ClCompile Include="ai\aiBase.cpp" />
+    <ClCompile Include="ai\AIImageDialog.cpp" />
     <ClCompile Include="ai\chatGPT.cpp" />
+    <ClCompile Include="ai\gemini.cpp" />
     <ClCompile Include="ai\ollama.cpp" />
     <ClCompile Include="ai\ServiceManager.cpp" />
     <ClCompile Include="AlignmentDialog.cpp" />
@@ -1024,8 +1026,10 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClInclude Include="AboutDialog.h" />
     <ClCompile Include="ai\AIColorPaletteDialog.h" />
     <ClInclude Include="ai\aiBase.h" />
+    <ClInclude Include="ai\AIImageDialog.h" />
     <ClInclude Include="ai\aiType.h" />
     <ClInclude Include="ai\chatGPT.h" />
+    <ClInclude Include="ai\gemini.h" />
     <ClInclude Include="ai\ollama.h" />
     <ClInclude Include="ai\ServiceManager.h" />
     <ClInclude Include="AlignmentDialog.h" />
@@ -1558,6 +1562,7 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
   </ItemGroup>
   <ItemGroup>
     <Text Include="..\documentation\xlDo Commands.txt" />
+    <Text Include="..\prompts\AI_Generate_Image.txt" />
     <Text Include="..\prompts\AI_Model_AutoMap.txt" />
     <Text Include="..\prompts\AI_Node_AutoMap.txt" />
     <Text Include="..\prompts\AI_Strand_AutoMap.txt" />
