--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -1118,6 +1118,8 @@
     <ClCompile Include="..\xSchedule\wxJSON\jsonreader.cpp" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonval.cpp" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonwriter.cpp" />
+    <ClCompile Include="ai\AIImageDialog.cpp" />
+    <ClCompile Include="ai\gemini.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BatchRenderDialog.h" />
@@ -2248,6 +2250,8 @@
     <ClInclude Include="..\xSchedule\wxJSON\jsonreader.h" />
     <ClInclude Include="..\xSchedule\wxJSON\jsonval.h" />
     <ClInclude Include="..\xSchedule\wxJSON\jsonwriter.h" />
+    <ClInclude Include="ai\AIImageDialog.h" />
+    <ClInclude Include="ai\gemini.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Models">
@@ -2324,6 +2328,7 @@
     <Text Include="..\prompts\AI_SubModel_AutoMap.txt">
       <Filter>Prompts</Filter>
     </Text>
+    <Text Include="..\prompts\AI_Generate_Image.txt" />
   </ItemGroup>
   <ItemGroup>
     <CustomBuild Include="effects\ispc\LayerBlendingFunctions.ispc" />
