--- a/.github/workflows/win_nightly.yml
+++ b/.github/workflows/win_nightly.yml
@@ -32,15 +32,17 @@ jobs:
 
     steps:
     - name: Checkout xLights
-      run: git clone https://github.com/xLightsSequencer/xLights.git C:/xLights/ --depth 1  --depth=1 --shallow-submodules --recurse-submodules
-
+      uses: actions/checkout@master
+      with:
+          submodules: 'true'
+          
     - name: Setup msbuild
       uses: microsoft/setup-msbuild@v1
 
     - name: install ISPC
       uses: ispc/install-ispc-action@main
       with:
-        version: 1.28.1
+        version: 1.29.1
             
 #    - name: install Inno
 #      run: choco install innosetup   
@@ -49,31 +51,31 @@ jobs:
       run: pip install in_place  
       
     - name: generate nightly version number
-      working-directory: C:/xLights/build_scripts/msw
+      working-directory: build_scripts\msw
       run: python WriteNightlyVersionFiles.py  
      
     - name: Download wxWidgets
       run: 
-        git clone --depth=1 --shallow-submodules  --recurse-submodules -b master https://github.com/xLightsSequencer/wxWidgets C:/wxWidgets/
+        git clone --depth=1 --shallow-submodules  --recurse-submodules -b master https://github.com/xLightsSequencer/wxWidgets ..\wxWidgets\
 
     - name: Build wxWidgets
-      working-directory: C:/wxWidgets/
+      working-directory: ..\wxWidgets\
       run: msbuild /m .\build\msw\wx_vc17.sln /p:Configuration="Release" /p:Platform="x64"
       
     - name: Build All
       shell: cmd
-      working-directory: C:/xLights/build_scripts/msw
+      working-directory: build_scripts\msw
       run: call build_VS_x64_skip_libltc.cmd
       
     - name: Build Installer
-      working-directory: C:/xLights/build_scripts/msw
+      working-directory: build_scripts\msw
       run: ISCC.exe xLights_4_64bit_VS.iss
 
     - name: Upload Installer
       uses: actions/upload-artifact@v4
       with:
         name: xLights_x64_Installer
-        path: 'C:\xLights\build_scripts\msw\output\**'
+        path: 'build_scripts\msw\output\**'
         
     - name: Create prerelease
       if: github.ref == 'refs/heads/master'
@@ -84,5 +86,5 @@ jobs:
         automatic_release_tag: "nightly"
         title: "${{ steps.version.outputs.version }}"
         files: |        
-          C:/xLights/build_scripts/msw/output/*.exe
+          ./build_scripts/msw/output/*.exe
 
