--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -1119,6 +1119,7 @@
     <ClCompile Include="..\xSchedule\wxJSON\jsonval.cpp" />
     <ClCompile Include="..\xSchedule\wxJSON\jsonwriter.cpp" />
     <ClCompile Include="ai\AIImageDialog.cpp" />
+    <ClCompile Include="ai\Gemini.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BatchRenderDialog.h" />
@@ -2250,6 +2251,7 @@
     <ClInclude Include="..\xSchedule\wxJSON\jsonval.h" />
     <ClInclude Include="..\xSchedule\wxJSON\jsonwriter.h" />
     <ClInclude Include="ai\AIImageDialog.h" />
+    <ClInclude Include="ai\gemini.h" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Models">
