--- a/xScanner/xScanner.cbp
+++ b/xScanner/xScanner.cbp
@@ -31,10 +31,10 @@
 					<Add directory="../xScanner" />
 					<Add directory="../include" />
 					<Add directory="../xLights" />
+					<Add directory="../dependencies/spdlog/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-lGL -lGLU -lglut -ldl -lX11 -lcurl" />
-					<Add option="`pkg-config --libs log4cpp`" />
 					<Add option="`wx-config --version=3.3 --libs std,media,gl,aui,propgrid`" />
 					<Add option="`pkg-config --libs gstreamer-1.0 gstreamer-video-1.0`" />
 					<Add option="-lexpat" />
@@ -65,10 +65,10 @@
 					<Add directory="../xScanner" />
 					<Add directory="../include" />
 					<Add directory="../xLights" />
+					<Add directory="../dependencies/spdlog/include" />
 				</Compiler>
 				<Linker>
 					<Add option="-lGL -lGLU -lglut -ldl -lX11 -lcurl" />
-					<Add option="`pkg-config --libs log4cpp`" />
 					<Add option="`wx-config --version=3.3 --libs std,media,gl,aui,propgrid`" />
 					<Add option="`pkg-config --libs gstreamer-1.0 gstreamer-video-1.0`" />
 					<Add option="-lexpat" />
