Hopefully add new files to linux/windows builds

--- a/xLights/Xlights.vcxproj
+++ b/xLights/Xlights.vcxproj
@@ -930,6 +930,7 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClCompile Include="sequencer\MainSequencer.cpp" />
     <ClCompile Include="sequencer\RowHeading.cpp" />
     <ClCompile Include="sequencer\SequenceElements.cpp" />
+    <ClCompile Include="sequencer\SequenceMedia.cpp" />
     <ClCompile Include="sequencer\tabSequencer.cpp" />
     <ClCompile Include="sequencer\TimeLine.cpp" />
     <ClCompile Include="sequencer\UndoManager.cpp" />
@@ -1472,6 +1473,7 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClInclude Include="sequencer\MainSequencer.h" />
     <ClInclude Include="sequencer\RowHeading.h" />
     <ClInclude Include="sequencer\SequenceElements.h" />
+    <ClInclude Include="sequencer\SequenceMedia.h" />
     <ClInclude Include="sequencer\TimeLine.h" />
     <ClInclude Include="sequencer\UndoManager.h" />
     <ClInclude Include="sequencer\Waveform.h" />
