--- a/xLights/Xlights.vcxproj.filters
+++ b/xLights/Xlights.vcxproj.filters
@@ -843,6 +843,9 @@
     <ClCompile Include="sequencer\SequenceElements.cpp">
       <Filter>sequencer</Filter>
     </ClCompile>
+    <ClCompile Include="sequencer\SequenceMedia.cpp">
+      <Filter>sequencer</Filter>
+    </ClCompile>
     <ClCompile Include="sequencer\tabSequencer.cpp">
       <Filter>sequencer</Filter>
     </ClCompile>
@@ -1972,6 +1975,9 @@
       <Filter>sequencer</Filter>
     </ClInclude>
     <ClInclude Include="sequencer\SequenceElements.h">
+      <Filter>sequencer</Filter>
+    </ClInclude>
+    <ClInclude Include="sequencer\SequenceMedia.h">
       <Filter>sequencer</Filter>
     </ClInclude>
     <ClInclude Include="sequencer\TimeLine.h">
