Add files for windows build

--- a/xLights/Xlights.vcxproj
+++ b/xLights/Xlights.vcxproj
@@ -821,6 +821,7 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClCompile Include="LMSImportChannelMapDialog.cpp" />
     <ClCompile Include="LorConvertDialog.cpp" />
     <ClCompile Include="LyricsDialog.cpp" />
+    <ClCompile Include="ManageMediaPanel.cpp" />
     <ClCompile Include="MIDI\Binasc.cpp" />
     <ClCompile Include="MIDI\MidiEvent.cpp" />
     <ClCompile Include="MIDI\MidiEventList.cpp" />
@@ -1365,6 +1366,7 @@ xcopy "$(SolutionDir)..\bin64\Vamp\" "$(TargetDir)Vamp\" /e /y /i /r
     <ClInclude Include="LMSImportChannelMapDialog.h" />
     <ClInclude Include="LorConvertDialog.h" />
     <ClInclude Include="LyricsDialog.h" />
+    <ClInclude Include="ManageMediaPanel.h" />
     <ClInclude Include="ModelDimmingCurveDialog.h" />
     <ClInclude Include="ModelFaceDialog.h" />
     <ClInclude Include="ModelGroupPanel.h" />
